# HomeWorkJavaBazelProject

./: .gitignore  BUILD  CommandLineFromGitBash07ForCreateBazelStartProject.sh  CommandLineFromGitBash08ForWorkByBazelProject.sh  CommandLineFromGitBash09ForPushBazelToGithub.sh  MODULE.bazel  README.md
src/main/java/org/example/bazel/: App.java
src/test/java/org/example/bazel/: AppTest.java
