bazel_dep(name = "rules_jvm_external", version = "6.2")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.example.dop1.dop2:mylib:0.0.1",
        "com.google.code.gson:gson:2.11.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "file:///C:/Users/gulae/.m2/repository",
    ],
)

use_repo(maven, "maven")